# agent-handwerk

./: .env.example  .gitignore  DEPLOYMENT_QUICK_START.md  Dockerfile  README.md  TODAYS_WORK_SUMMARY.md  alembic.ini  docker-compose.handwerk.yml  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 25f951fb5996_initial_schema_calls_appointments_.py  2b8806bd7f12_add_multi_tenant_models.py  b6641af6f696_add_campaigncontactmodel_for_recall_.py  c8a1e2f34567_add_conversation_transcripts.py  fdb7dfd4116b_add_handwerk_jobs_quotes.py
configs/: default.yaml  production.yaml  telephony.yaml
dashboard/: Dockerfile  docker-compose.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: providers.tsx
dashboard/hooks/: use-jobs.ts
dashboard/types/: index.ts
deploy/: deploy-full-stack.sh  deploy-handwerk.sh  deploy.sh  docker-deploy.sh
deploy/nginx/: default.conf  phone-agent.conf
deploy/systemd/: phone-agent.service
docs/: ADMIN_DASHBOARD.md  API.md  DEPLOYMENT.md  DEPLOYMENT_RPI5.md  DEPLOYMENT_UPDATE_HANDWERK.md  GETTING_STARTED.md  INDUSTRY_MODULE_GUIDE.md  LLM_CHAT_INTEGRATION.md  PI_ARRIVAL_CHECKLIST.md  PRODUCTION_CHECKLIST.md  SCHWAEBISCH_IMPROVEMENT.md
docs/adr/: 0001-local-first-edge-architecture.md  0002-industry-module-pattern.md  0003-german-language-optimization.md  0004-telephony-abstraction.md  0005-dsgvo-compliance-architecture.md
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
prompts/: appointment_confirmation.jinja2  greeting.jinja2  sms_reminder.jinja2
scripts/: dashboard.py  download_models.py  seed_data.py  setup_dev.sh  setup_freeswitch.sh  setup_sipgate.md  test_audio_pipeline.py  test_cloud_standalone.py  test_handwerk_conversation.py
secrets/: .gitkeep  README.md
shared-libs/: README.md  pyproject.toml
shared-libs/src/itf_shared/: __init__.py
shared-libs/src/itf_shared/config/: __init__.py  loader.py
shared-libs/src/itf_shared/logging/: __init__.py  setup.py
shared-libs/src/itf_shared/remote/: __init__.py  heartbeat.py
src/phone_agent/: __init__.py  cli.py  config.py  dependencies.py  main.py
static/: admin.html  audio_test.html  chat.html  elektro-admin.html  handwerk-demo.html  voice-demo.html
tests/: conftest.py  test_compliance_api.py  test_conversation_memory.py  test_dialect_detection.py  test_e2e_call_flow.py  test_email_agent.py  test_freie_berufe.py  test_gastro.py  test_handwerk.py  test_handwerk_triage.py  test_healthcare.py  test_multilingual_voice.py  test_outbound.py  test_security.py  test_streaming_pipeline.py  test_telephony.py  test_triage.py  test_vad_and_metrics.py
tests/load/: README.md  ai_pipeline_stress.py  locustfile.py  run_load_tests.py  websocket_stress.py
tests/test_calendar/: __init__.py  conftest.py  test_google_calendar.py
tests/test_db/: test_compliance_repos.py  test_repos.py
(+199 files in other folders)
